<resources>
    <string name="app_name">Class2_Challenge</string>
    <string name="register">Register</string>
    <string name="your_birthday">Your birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="name_textview">Name:</string>
    <string name="surname_textview">Surname:</string>
    <string name="phone_textview">Phone:</string>
    <string name="call">Call</string>
    <string name="birthday_textview">Birthday:</string>
    <string name="email">Email</string>
</resources>